[package]
name = "bcat-civitai"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
indicatif = "0.17.11"
serde_json = "1.0.139"
chrono = "0.4.40"
sha2 = "0.10.8"
