[package]
name = "bcat-civitai"
version = "0.1.0"
edition = "2024"
license = "mit"
description = "downloads models from civitai"
authors = ["bcat"]
keywords = ["civitai", "download", "model", "ai", "artificial intelligence"]
homepage = "https://github.com/burritocatai/bcat-civitai"
repository = "https://github.com/burritocatai/bcat-civitai"
readme = "README.md"


[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
indicatif = "0.17.11"
serde_json = "1.0.139"
chrono = "0.4.40"
sha2 = "0.10.8"
